Extended Articles API with optional sort order, for sorting articles.